welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:7: error: ')' expected but 'if' found.
if ((b >= 13 && b <= 19) {
^countTeen:11: error: ')' expected but 'if' found.
if ((c >= 13 && c <= 19) {
^countTeen:15: error: ')' expected but 'if' found.
if ((d >= 13 && d <= 19) {
^countTeen:19: error: ')' expected but 'return' found.
return nb;
^